Fix checkbox alignment in results

--- a/AntT/WebContent/index_files/custom.css
+++ b/AntT/WebContent/index_files/custom.css
@@ -119,3 +119,7 @@ input[type=number] {
 [tooltip][data-toggle="collapse"]:hover {
 	cursor: pointer;
 }
+
+.slim {
+	margin: 0px;
+}
